[frontend] Fixed panel vertical spacing

--- a/frontend/src/app/(query)/(panel)/panel.module.less
+++ b/frontend/src/app/(query)/(panel)/panel.module.less
@@ -80,7 +80,7 @@
     display: grid;
     grid-row: span 2;
     grid-template-rows: subgrid;
-    gap: 0.5em;
+    gap: 0em 0.5em;
 
     max-width: 100%;
 
